[package]
name = "r-projects"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Descripción breve de tu binario o proyecto"
repository = "https://github.com/usuario/mi-binario"
homepage = "https://mi-binario.ejemplo.com"
documentation = "https://docs.rs/mi-binario"
readme = "README.md"
keywords = ["cli", "tools"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2.0"
clap = "3.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dirs = "4.0"

[[bin]]
name = "r-projects"
path = "src/main.rs"